# ospurge

./: .gitignore  .gitreview  .testr.conf  .zuul.yaml  LICENSE  README.md  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
debian/: changelog  control  python-resourcesmanager.preinst  rules
doc/source/: conf.py
ospurge/: .gitignore  __init__.py  base.py  client.py  constants.py  exceptions.py  main.py  main.pyi  os_purge.py  ospurge.py  utils.py  utils.pyi
ospurge/common/: exceptions.py
ospurge/resources/: base.py  base.pyi  ceilometer.py  cinder.py  cinder.pyi  designate.py  designate.pyi  glance.py  glance.pyi  heat.py  heat.pyi  neutron.py  neutron.pyi  nova.py  nova.pyi  octavia.py  swift.py  swift.pyi
ospurge/tests/: __init__.py  client_fixtures.py  test_client.py  test_main.py  test_os_purge.py  test_ospurge.py  test_utils.py
ospurge/tests/resources/: entry_points.py  test_base.py  test_cinder.py  test_designate.py  test_glance.py  test_heat.py  test_neutron.py  test_nova.py  test_swift.py
playbooks/legacy/ospurge-dsvm-functional/: run.yaml
playbooks/ospurge-functional/: run.yaml
tools/: .gitignore  dummy_stack.yaml  func-tests.sh  heat-template.yaml  ospopulate.bash  populate.sh  post_test_hook.sh  print_order.py  stress.sh  utils.bash
