[metadata]
name = ospurge
author = Florent Flament
author-email = florent.flament@cloudwatt.com
home-page = https://github.com/stackforge/ospurge
summary = OpenStack resources cleanup script
description-file = README.md
license = MIT
classifier =
        Development Status :: 5 - Production/Stable
        Environment :: Console
        Environment :: OpenStack
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: MIT License
        Programming Language :: Python
keywords =
    openstack

[entry_points]
console_scripts =
    ospurge = ospurge.ospurge:main

[files]
packages =
    ospurge
