[metadata]
name = ospurge
author = The OSPurge contributors
author-email = openstack-discuss@lists.openstack.org
home-page = https://github.com/openstack/ospurge
summary = OpenStack resources cleanup script
description-file = README.rst
license = Apache-2
classifier =
        Development Status :: 5 - Production/Stable
        Environment :: Console
        Environment :: OpenStack
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        Intended Audience :: System Administrators
        License :: OSI Approved :: Apache Software License
        Operating System :: POSIX :: Linux
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.5
keywords =
    openstack

[entry_points]
console_scripts =
    ospurge = ospurge.main:main

[files]
packages =
    ospurge

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
# Treat sphinx warnings as errors during the docs build; this helps us keep
# the documentation clean.
warnerrors = True
